--- a/src/style/common.less
+++ b/src/style/common.less
@@ -113,3 +113,8 @@ html,body{
 .animation_opactiy{
     animation: backOpacity 2s ease-in-out infinite;
 }
+
+.container{
+    width: 100%;
+    height: 100%;
+}
