求购列表静态页

--- a/src/style/mixin.less
+++ b/src/style/mixin.less
@@ -3,6 +3,9 @@
 @line_light_gray:#DDD;
 @background_gray: #F5F5F5;
 
+@font_dark:#333;
+@font_light:#666;
+
 // 状态颜色
 @status_green:#439912;
 @status_red:#FF5555;
@@ -12,8 +15,6 @@
     filter: ~"alpha(opacity=@{iefactor})";
     opacity: @factor;
 }
-
-
 .borderRadius(@radius:.05rem) { 
     -moz-border-radius: @radius; 
     -webkit-border-radius: @radius; 
