增加皇冠组件，

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -10,7 +10,7 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
     font-family: "Microsoft Yahei";
     box-sizing: border-box;
     -webkit-tap-highlight-color:transparent;
-    -webkit-font-smoothing: antialiased;
+    // -webkit-font-smoothing: antialiased;
     &:hover{
         outline: none;
     }
